# archive.py

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  demo.py  environment.yml  migrate.py  online.http  parquet_transform.py  pyproject.toml  query.py  rewrite_archive.py  test.http
.github/workflows/: docker.yml  p2p-worker-docker.yml
benchmark/: fetch_all_worker.py  gravatar.py  gravatar_squid.py  gravatar_worker.py  queries.py  squid.py  test_squid.py  test_worker.py  test_worker_usdc.py  tools.py  usdc_transfers_worker.py
environments/: dev.yml  ingest.yml  worker.yml  writer.yml
etha/: fs.py  layout.py  log.py  util.py
etha/counters/: rate.py
etha/gateway/: engine.py  main.py  sql.py
etha/ingest/: __main__.py  block.py  column.py  ingest.py  main.py  metrics.py  model.py  moonbase.py  tables.py  trace.py  util.py  writer.py
etha/log/: __init__.py  format.py  level.py
etha/query/: engine.py  model.py  result_set.py  runner.py  sql.py  test.py  util.py
etha/task/: ipfs_service.py  main.py  query.py
etha/util/: asyncio.py  child_proc.py
etha/worker/: __main__.py  api.py  fake_router.py  intervals.py  metrics.py  query.py  server.py  state_manager.py  transport.py  worker.py
etha/writer/: block.py  ingest.py  main.py  metrics.py  model.py  rpc.py  speed.py  tables.py  trace.py  writer.py
gateway/: engine.py  main.py  query.py  sql.py
ingest/: column.py  main.py  tables.py  writer.py
misc/: stage_1.http  test.http
scripts/: check_workers_state.py  delete_chunks.py  fix_eth_raw.py  fix_optimism_traces.py  reindex_chunk.py  upload_raw_chunk.py  validate_chunks.py  validate_layout.py  validate_solana_chunks.py
sqa/: duckdb.py  fs.py  init.py  layout.py  metrics.py
sqa/eth/: query.py
sqa/fuel/: query.py
sqa/gateway_allocations/: allocation.py  allocations_provider.py  computation_units_storage.py  gateway_allocations.py
sqa/gateway_controller/: __init__.py  allocation.py  allocations_provider.py  computation_units_storage.py
sqa/query/: __init__.py  builder.py  model.py  plan.py  runner.py  schema.py  sql.py  util.py
sqa/solana/: query.py
sqa/starknet/: query.py
sqa/substrate/: query.py
sqa/tron/: query.py
sqa/util/: __init__.py  asyncio.py  child_proc.py  sql.py
sqa/worker/: __main__.py  api.py  auth.py  explain.py  fake_router.py  query.py  server.py  transport.py  util.py  worker.py
sqa/writer/: __init__.py  cli.py  ingest.py  metrics.py  parquet.py
tests/: .gitattributes  fake_router.py  fetch_fixtures.py  run.py  test_worker_auth.py
tests/fixtures/: all_logs_and_logs+tx_regression.json  all_logs_and_logs+tx_regression.result.json  empty_filter.json  include_all_blocks.json  load_all_tx_and_logs.json  load_all_tx_and_logs.result.json  sighash_filtering.json  (+4 more)
(+290 files in other folders)
