[project]
name = "subsquid-eth-archive"
description = "Subsquid stage 2 ingester and worker"
version = "0.1.0"
authors = [{name = "Subsquid Labs GmbH", email = "contact@subsquid.io"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "duckdb == 0.9.1",
    "httpx == 0.*",
    "pyarrow == 13.*",
    "s3fs >= 2021.8.0",
    "sentry-sdk == 1.28.*",
]

[project.optional-dependencies]
writer = [
    "pycryptodome>=3.18.0",
    "prometheus-client==0.17.*",
    "trie==2.1.1",
    "rlp>=3.0.0",
    "setuptools>=68.2.2",
]

http-worker = [
    "falcon == 3.*",
    "marshmallow == 3.*",
    "uvicorn == 0.*",
    "psutil>=5.9.5",
]

p2p-worker = [
    "grpcio == 1.*",
    "marshmallow == 3.*",
    "protobuf == 4.*",
    "psutil>=5.9.5",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "locust>=2.15.1",
]
